--- a/alfred/Alfred.alfredpreferences/preferences/appearance/options/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/appearance/options/prefs.plist
@@ -8,6 +8,8 @@
 	<true/>
 	<key>hidemenu</key>
 	<true/>
+	<key>showOnScreen</key>
+	<integer>2</integer>
 	<key>xPoint</key>
 	<integer>0</integer>
 	<key>yPoint</key>
