--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/vim/bundle/autoswap.vim"]
 	path = vim/vim/bundle/autoswap.vim
 	url = https://github.com/vim-scripts/autoswap.vim.git
+[submodule "vim/vim/bundle/vim-polyglot-darkcloud"]
+	path = vim/vim/bundle/vim-polyglot-darkcloud
+	url = https://github.com/prurigro/vim-polyglot-darkcloud
