--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/vim/bundle/ctrlp.vim"]
 	path = vim/vim/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "vim/vim/bundle/loremipsum"]
+	path = vim/vim/bundle/loremipsum
+	url = https://github.com/vim-scripts/loremipsum.git
