--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "scripts/mp4towebm"]
 	path = scripts/mp4towebm
 	url = https://github.com/lukevers/mp4towebm
+[submodule "vim/vim/bundle/incsearch.vim"]
+	path = vim/vim/bundle/incsearch.vim
+	url = https://github.com/haya14busa/incsearch.vim
