--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/vim/bundle/vim-multiple-cursors"]
 	path = vim/vim/bundle/vim-multiple-cursors
 	url = https://github.com/terryma/vim-multiple-cursors
+[submodule "vim/vim/bundle/lightline.vim"]
+	path = vim/vim/bundle/lightline.vim
+	url = git@github.com:itchyny/lightline.vim.git
