--- a/tmux/tmux.config
+++ b/tmux/tmux.config
@@ -17,7 +17,7 @@ set-option -g status-justify 'left'
 
 TMUX1='#[fg=colour254]#[bg=colour31] #(date "+%a")  #[bold]#(date "+%b %d %Y") #[fg=colour31]#[bg=colour39] #[default]'
 TMUX2='#[fg=colour254,bg=colour39]#(date "+%Z") #[bold] #(date "+%H:%M") #[fg=colour39, bg=colour26]#[default]'
-TMUX3='#[bg=colour26, fg=colour254] cjdns #[bold] #(ping6 -c 1 fc49:8be3:42b7:4f0c:4e68:563f:dac6:e259 | grep / | cut -c 34-38) ms #[default]'
+TMUX3='#[bg=colour26, fg=colour254] cjdns #[bold] #(ping6 -c 1 h.lukevers.com | grep / | cut -c 34-38) ms #[default]'
 
 TMUX4='#[bg=colour0, fg=colour26]#[default]'
 
