--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/vim/bundle/neocomplete.vim"]
 	path = vim/vim/bundle/neocomplete.vim
 	url = https://github.com/Shougo/neocomplete.vim
+[submodule "scripts/mp4towebm"]
+	path = scripts/mp4towebm
+	url = https://github.com/lukevers/mp4towebm
